# prefix-sum

./: .gitignore  Cargo.toml  README.md  build.rs  cuda_reduce.c  work-efficient-cuda-reduce.c
src/: blackbox.c  cpu.rs  main.rs  shader.wgsl
