[package]
name = "prefix-sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
bytemuck = {version = "1.15.0", features = ["derive"] }
futures-intrusive = "0.5.0"
pollster = "0.3.0"
wgpu = "0.20.0"

[build-dependencies]
cc = "1.0.97"
